# TermGameLoader

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: GameLoader.cpp.CE6847F47B0C882F.idx  main.cpp.A3FA2F1BDBCABAC2.idx  test.cpp.E1FADFDBCA42D0F3.idx
.github/workflows/: cmake.yml
src/: GameInitializer.cpp  GameInitializer.hpp  GameLoader.cpp  GameLoader.hpp  TerminalGame.cpp  TerminalGame.hpp  main.cpp
src/games/: HelicopterGame.cpp  HelicopterGame.hpp
src/games/helicopter/: GameObject.cpp  GameObject.hpp  utils.hpp
